fix(app-dashboard): wip, working build
