# packages/libs/registry-sdk/src/generated/openapi.json
@@ -277,78 +277,6 @@
         ],
         "additionalProperties": false
       },
-      "AppVersionCreate": {
-        "type": "object",
-        "properties": {
-          "changes": {
-            "type": "string",
-            "description": "Describes what changed between this version and the previous version.",
-            "example": "I am a changelog trapped in a computer!"
-          }
-        },
-        "additionalProperties": false
-      },
-      "AppVersionEdit": {
-        "type": "object",
-        "properties": {
-          "changes": {
-            "type": "string",
-            "description": "Describes what changed between this version and the previous version.",
-            "example": "I am a changelog trapped in a computer!"
-          }
-        },
-        "additionalProperties": false
-      },
-      "AppVersion": {
-        "type": "object",
-        "properties": {
-          "_id": {
-            "type": "string",
-            "description": "Document ID",
-            "readOnly": true
-          },
-          "updatedAt": {
-            "type": "string",
-            "format": "date-time",
-            "description": "Timestamp when this was last modified"
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time",
-            "description": "Timestamp when this was created"
-          },
-          "appId": {
-            "type": "number",
-            "description": "Application ID",
-            "example": 12312345,
-            "readOnly": true
-          },
-          "version": {
-            "type": "number",
-            "description": "App Version number",
-            "example": 1,
-            "readOnly": true
-          },
-          "changes": {
-            "type": "string",
-            "description": "Describes what changed between this version and the previous version.",
-            "example": "I am a changelog trapped in a computer!"
-          },
-          "isDeleted": {
-            "type": "boolean",
-            "description": "Whether or not this AppVersion is deleted",
-            "example": false
-          }
-        },
-        "required": [
-          "_id",
-          "updatedAt",
-          "createdAt",
-          "appId",
-          "version"
-        ],
-        "additionalProperties": false
-      },
       "AppVersionAbilityCreate": {
         "type": "object",
         "properties": {
@@ -1571,12 +1499,6 @@
           "$ref": "#/components/schemas/App"
         }
       },
-      "AppVersionList": {
-        "type": "array",
-        "items": {
-          "$ref": "#/components/schemas/AppVersion"
-        }
-      },
       "AppVersionAbilityList": {
         "type": "array",
         "items": {
@@ -1645,8 +1567,7 @@
     "/app": {
       "post": {
         "tags": [
-          "App",
-          "AppVersion"
+          "App"
         ],
         "summary": "Creates a new application",
         "operationId": "createApp",
@@ -1807,7 +1728,6 @@
       "delete": {
         "tags": [
           "App",
-          "AppVersion",
           "AppVersionAbility"
         ],
         "summary": "Deletes an application",
@@ -1863,7 +1783,6 @@
       "post": {
         "tags": [
           "App",
-          "AppVersion",
           "AppVersionAbility"
         ],
         "summary": "Undeletes an application",
@@ -1892,439 +1811,6 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/GenericResultMessage"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid input"
-          },
-          "422": {
-            "description": "Validation exception"
-          },
-          "default": {
-            "description": "Unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/app/{appId}/versions": {
-      "get": {
-        "tags": [
-          "AppVersion"
-        ],
-        "summary": "Fetches all versions of an application",
-        "operationId": "getAppVersions",
-        "parameters": [
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "ID of the target application",
-            "example": 132,
-            "name": "appId",
-            "in": "path"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/AppVersionList"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Application not found"
-          },
-          "default": {
-            "description": "Unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/app/{appId}/version": {
-      "post": {
-        "tags": [
-          "AppVersion"
-        ],
-        "summary": "Creates an application version",
-        "operationId": "createAppVersion",
-        "security": [
-          {
-            "siweAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "ID of the target application",
-            "example": 132,
-            "name": "appId",
-            "in": "path"
-          }
-        ],
-        "requestBody": {
-          "description": "Developer-defined version details",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/AppVersionCreate"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/AppVersion"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid input"
-          },
-          "422": {
-            "description": "Validation exception"
-          },
-          "default": {
-            "description": "Unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/app/{appId}/version/{version}": {
-      "get": {
-        "tags": [
-          "AppVersion"
-        ],
-        "summary": "Fetches an application version",
-        "operationId": "getAppVersion",
-        "parameters": [
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "ID of the target application",
-            "example": 132,
-            "name": "appId",
-            "in": "path"
-          },
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "Version # of the target application version",
-            "example": 3,
-            "name": "version",
-            "in": "path"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/AppVersion"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Application not found"
-          },
-          "default": {
-            "description": "Unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "AppVersion"
-        ],
-        "summary": "Edits an application version",
-        "operationId": "editAppVersion",
-        "security": [
-          {
-            "siweAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "ID of the target application",
-            "example": 132,
-            "name": "appId",
-            "in": "path"
-          },
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "Version # of the target application version",
-            "example": 3,
-            "name": "version",
-            "in": "path"
-          }
-        ],
-        "requestBody": {
-          "description": "Update version changes field",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/AppVersionEdit"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/AppVersion"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid input"
-          },
-          "422": {
-            "description": "Validation exception"
-          },
-          "default": {
-            "description": "Unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "AppVersion"
-        ],
-        "summary": "Deletes an application version",
-        "operationId": "deleteAppVersion",
-        "security": [
-          {
-            "siweAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "ID of the target application",
-            "example": 132,
-            "name": "appId",
-            "in": "path"
-          },
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "Version # of the target application version",
-            "example": 3,
-            "name": "version",
-            "in": "path"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK - Resource successfully deleted",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GenericResultMessage"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid input"
-          },
-          "404": {
-            "description": "Application or version not found"
-          },
-          "422": {
-            "description": "Validation exception"
-          },
-          "default": {
-            "description": "Unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/app/{appId}/version/{version}/enable": {
-      "post": {
-        "tags": [
-          "AppVersion"
-        ],
-        "summary": "Enables an application version",
-        "operationId": "enableAppVersion",
-        "security": [
-          {
-            "siweAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "ID of the target application",
-            "example": 132,
-            "name": "appId",
-            "in": "path"
-          },
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "Version # of the target application version",
-            "example": 3,
-            "name": "version",
-            "in": "path"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/AppVersion"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid input"
-          },
-          "422": {
-            "description": "Validation exception"
-          },
-          "default": {
-            "description": "Unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/app/{appId}/version/{version}/disable": {
-      "post": {
-        "tags": [
-          "AppVersion"
-        ],
-        "summary": "Disables an application version",
-        "operationId": "disableAppVersion",
-        "security": [
-          {
-            "siweAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "ID of the target application",
-            "example": 132,
-            "name": "appId",
-            "in": "path"
-          },
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "Version # of the target application version",
-            "example": 3,
-            "name": "version",
-            "in": "path"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/AppVersion"
                 }
               }
             }
@@ -2633,73 +2119,6 @@
           },
           "404": {
             "description": "Application, version, or ability not found"
-          },
-          "422": {
-            "description": "Validation exception"
-          },
-          "default": {
-            "description": "Unexpected error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/app/{appId}/version/{version}/undelete": {
-      "post": {
-        "tags": [
-          "AppVersion"
-        ],
-        "summary": "Undeletes an application version",
-        "operationId": "undeleteAppVersion",
-        "security": [
-          {
-            "siweAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "ID of the target application",
-            "example": 132,
-            "name": "appId",
-            "in": "path"
-          },
-          {
-            "schema": {
-              "type": "number"
-            },
-            "required": true,
-            "description": "Version # of the target application version",
-            "example": 3,
-            "name": "version",
-            "in": "path"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK - Resource successfully undeleted",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/GenericResultMessage"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid input"
-          },
-          "404": {
-            "description": "Application or version not found"
           },
           "422": {
             "description": "Validation exception"
